--- a/rdms_app/templates/rdms/index.html
+++ b/rdms_app/templates/rdms/index.html
@@ -5,5 +5,10 @@ Home
 {%endblock%}
 
 {% block content %} 
-<h1>Hello</h1>
+    <div>
+        <ul>
+            <li><a href="{% url 'home_page' %}">Home</a></li>
+            <li><a href="{% url 'register' %}">Register</a></li>
+        </ul>
+    </div>
 {% endblock %}
