--- a/rdms_app/templates/rdms/dashboard.html
+++ b/rdms_app/templates/rdms/dashboard.html
@@ -29,7 +29,7 @@ Home
 
         <div class="row mt-3">
 
-            <div class="col-md-9">
+            <div class="col-md-4">
                 <span>Username: <span class="text-white-50">{{request.user.username}}</span> </span>
                 <br>
                 <span>Lives In: <span class="text-white-50">{{request.user.userinfo.present_address}}</span></span>
@@ -43,8 +43,41 @@ Home
                 <a href="{% url 'edit_profile_info' %}" class="text-decoration-underline text-success">Edit more Info.....</a>
             </div>
 
+            <div class="col-md-5">
+                <h2>Your Posts</h2>
+                <div>
+                    {% for blog in blogs %}
+                        <span class="fs-5 fw-bolder">{{request.user.first_name | upper}} {{request.user.last_name | upper}}</span>
+                        <br>
+                        <span class="fs-6 text-white-50">
+                            {% for category in blog.categories.all %}
+                                {{category.name}} {% if not forloop.last %}|{% endif %}
+                            {% endfor %}
+                        </span>
+
+                        <div class="mt-3">
+                            <span class="fw-bold">{{blog.title}}</span>
+                            <br>
+                            <span>{{blog.description}}</span>
+                        </div>
+
+                        <div class="mt-3">
+                            {% if blog.photos %}
+                                <img src="{{ blog.photos.url }}" alt="Profile Picture" width="600px" height="200px">
+                            {% endif %}
+                        </div>
+                        <div class="my-5">
+                            <a href="" class="text-warning text-decoration-none">Update Post</a>
+                            <a href="" class="float-end text-danger text-decoration-none">Delete Post</a>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+
             <div class="col-md-3">
                 <a class="text-decoration-none ms-2 text-success" ms-1 aria-current="page" href="{% url 'register' %}">Create Another Account</a>
+                <br>
+                <a class="text-decoration-none ms-2 text-success" aria-current="page" href="{% url 'create_post' %}">Create Your Post</a>
                 <br>
                 <a href="{% url 'login_view' %}" class="ms-2 text-decoration-none text-success">Switch Account</a>
                 <br>
@@ -52,7 +85,7 @@ Home
                 <br>
                 <a class="text-decoration-none ms-2 text-success" aria-current="page" href="{% url 'logout_view' %}">Logout</a>
             </div>
-
+            
         </div>
 
     </div>
