--- a/rdms_app/templates/rdms/index.html
+++ b/rdms_app/templates/rdms/index.html
@@ -8,7 +8,7 @@ Home
     <div>
         <div class="bg-dark py-3 text-center">
             {% if user.is_authenticated %}
-                <a href="{% url 'profile_page' %}" class="text-secondary mx-4 text-decoration-none">Create Another Account</a>
+                <a href="{% url 'register' %}" class="text-secondary mx-4 text-decoration-none">Create Another Account</a>
             {% else %}
                 <a href="{% url 'register' %}" class="text-secondary mx-4 text-decoration-none">Create an Account</a>
             {% endif %}
