--- a/rdms_app/templates/rdms/dashboard.html
+++ b/rdms_app/templates/rdms/dashboard.html
@@ -6,6 +6,7 @@ Home
 
 {% block content %} 
     <div>
+        {{m}}
         <div class="row bg-dark text-white-50 p-3">
 
             <div class="col-md-10 mt-1">
@@ -45,34 +46,61 @@ Home
 
             <div class="col-md-5">
                 <h2>Your Posts</h2>
+
                 <div>
-                    {% for blog in blogs %}
-                        <span class="fs-5 fw-bolder">{{request.user.first_name | upper}} {{request.user.last_name | upper}}</span>
-                        <br>
-                        <span class="fs-6 text-white-50">
-                            {% for category in blog.categories.all %}
-                                {{category.name}} {% if not forloop.last %}|{% endif %}
-                            {% endfor %}
-                        </span>
-
-                        <div class="mt-3">
-                            <span class="fw-bold">{{blog.title}}</span>
+                    {% if blogs %}
+                        {% for blog in blogs %}
+                            <span class="fs-5 fw-bolder">{{request.user.first_name | upper}} {{request.user.last_name | upper}}</span>
                             <br>
-                            <span>{{blog.description}}</span>
-                        </div>
+                            <span class="fs-6 text-white-50">
+                                {% for category in blog.categories.all %}
+                                    {{category.name}} {% if not forloop.last %}|{% endif %}
+                                {% endfor %}
+                            </span>
 
-                        <div class="mt-3">
-                            {% if blog.photos %}
-                                <img src="{{ blog.photos.url }}" alt="Profile Picture" width="600px" height="200px">
-                            {% endif %}
-                        </div>
-                        <div class="my-5">
-                            {% if blog.user == request.user %}
-                                <a href="{% url 'edit_post' blog.id %}" class="text-warning text-decoration-none">Edit Post</a>
-                                <a href="{% url 'delete_post' blog.id %}" class="float-end text-danger text-decoration-none">Delete Post</a>
-                            {% endif %}
-                        </div>
-                    {% endfor %}
+                            <div class="mt-3">
+                                <span class="fw-bold">{{blog.title}}</span>
+                                <br>
+                                <span>{{blog.description}}</span>
+                            </div>
+
+                            <div class="mt-3">
+                                {% if blog.photos %}
+                                    <img src="{{ blog.photos.url }}" alt="Profile Picture" width="600px" height="200px">
+                                {% endif %}
+                            </div>
+
+                            <div class="mt-3 p-0">
+                                <h2 id="comments-{{blog.id}}">Comments:</h2>
+                                {% for comment in blog.comments.all %}
+                                    <div style="padding: 10px; margin-bottom: 10px;">
+                                        <strong>{{ comment.user.username }}</strong>
+                                        <p>{{ comment.comments }}</p>
+                                    </div>
+                                    {% empty %}
+                                        <p>No comments yet.</p>
+                                {% endfor %}
+                                
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    {{ form.as_p }}
+                                    <input type="hidden" name="blog_id" value="{{blog.id}}">
+                                    <button type="submit">Post Comment</button>
+                                </form>
+                            </div>
+
+                            <div class="my-5">
+                                {% if blog.user == request.user %}
+                                    <a href="{% url 'edit_post' blog.id %}" class="text-warning text-decoration-none">Edit Post</a>
+                                    <a href="{% url 'delete_post' blog.id %}" class="float-end text-danger text-decoration-none">Delete Post</a>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                        {% else %}
+                        <p>
+                            {{message}}
+                        </p>
+                    {% endif %}
                 </div>
             </div>
 
