OTP Verify & Forget Password

--- a/rdms_app/templates/rdms/dashboard.html
+++ b/rdms_app/templates/rdms/dashboard.html
@@ -33,7 +33,7 @@ Home
             <div class="col-md-4">
                 <span>Username: <span class="text-white-50">{{request.user.username}}</span> </span>
                 <br>
-                <span>Lives In: <span class="text-white-50">{{request.user.userinfo.present_address}}</span></span>
+                <span>Lives In: <span class="text-white-50">{{request.user.userinfo.present_address}}</span>
                 <br>
                 <span>From: <span class="text-white-50">{{request.user.userinfo.permanent_address}}</span></span>
                 <br>
